# Zencore-rs

./: .gitignore  Cargo.toml  README.md  build_all.sh
.github/workflows/: packaging.yml  rust.yml  windows-release.yml
src/: archive_name.rs  cli.rs  compress.rs  config.rs  crypto.rs  crypto_extended.rs  encrypt_tar.rs  fuzzer.rs  main.rs  path_utils.rs  remote.rs  state.rs  utils.rs
