[package]
name = "blues-zencore"
version = "1.0.0"
edition = "2021"
authors = ["Blues24"]
description = "Minimalist and interactive music backup tool"
license = "AGPL-3.0"
repository = "https://github.com/Blues24/Zencore-rs"

[dependencies]
# CLI & Interactive
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
console = "0.15"
colored = "2.1"
figlet-rs = "0.1.5"  # ASCII art banners


# Performance
rayon = "1.10"  # Parallel processing
num_cpus = "1.16"  # CPU detection


# Cross-platform
# (uses existing `directories` crate)
# Compression & Archive
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
zip = "0.6"

# Cryptography & Hashing
sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
blake3 = "1.5"  # Fast hashing
sha3 = "0.10"  # SHA3-256
chacha20poly1305 = "0.10"  # ChaCha20 cipher
bzip2 = "0.4"  # Additional compression


# File System
walkdir = "2.5"
ignore = "0.4"

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
directories = "5.0"  # XDG directories support
shellexpand = "3.1"  # Tilde expansion for paths

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "zencore"
path = "src/main.rs"