[package]
name = "Zencore-rs"
version = "1.3.1" 
edition = "2024"
authors = ["Blues24"]
description = "Minimalist and interactive music backup tool"
license = "AGPL-3.0"
repository = "https://github.com/Blues24/Zencore-rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
console = "0.15"
colored = "2.2"

rayon = "1.10"
num_cpus = "1.16"

tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
zip = "2.2"

sha2 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"

blake3 = { version = "1.5", optional = true }
sha3 = { version = "0.10", optional = true }


walkdir = "2.5"
ignore = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

anyhow = "1.0"
thiserror = "1.0"

chrono = "0.4"
directories = "5.0"
dirs = "5.0"
shellexpand = "3.1"

base64 = { version = "0.22", optional = true }
age = "0.11"
secrecy = "0.10.3"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[features]
default = ["advanced-checksums", "remote"]
advanced-checksums = ["blake3", "sha3"]
remote = ["base64"]

[[bin]]
name = "zencore"
path = "src/main.rs"
